--- a/learn-to-rock/src/App.css
+++ b/learn-to-rock/src/App.css
@@ -38,29 +38,31 @@
 }
  */
 
-.navbar {
-  height : 70px;
-  width: 100%;
-  background-color: #6e9cbb;
-}
+/*new changes*/
 
-.nav {
-  width: auto;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-}
+/*.navbar {*/
+/*  height : 70px;*/
+/*  width: 100%;*/
+/*  background-color: #6e9cbb;*/
+/*}*/
 
-.leftside, .rightside {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+/*.nav {*/
+/*  width: auto;*/
+/*  height: 100%;*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+/*}*/
 
-.navs, .log {
-  list-style: none;
-  margin: 10px;
-  padding: 10px;
-  border-radius: 10%;
-  border: 1px solid palegreen;
-}
+/*.leftside, .rightside {*/
+/*  display: flex;*/
+/*  justify-content: center;*/
+/*  align-items: center;*/
+/*}*/
+
+/*.navs, .log {*/
+/*  list-style: none;*/
+/*  margin: 10px;*/
+/*  padding: 10px;*/
+/*  border-radius: 10%;*/
+/*  border: 1px solid palegreen;*/
+/*}*/
