--- a/learn-to-rock/src/components/mainContainer/MainBody.scss
+++ b/learn-to-rock/src/components/mainContainer/MainBody.scss
@@ -1,5 +1,8 @@
-
+::-webkit-scrollbar {
+  display: none;
+}
 .main-body {
   background-image: url("../../assets/greensummer.jpg");
   background-position: center;
+  background-size: 100% 100%;
 }
