Added UI pages for Intro and added video background

--- a/learn-to-rock/src/components/mainContainer/MainBody.scss
+++ b/learn-to-rock/src/components/mainContainer/MainBody.scss
@@ -2,7 +2,8 @@
   display: none;
 }
 .main-body {
-  background-image: url("../../assets/greensummer.jpg");
+  //background-image: url("../../assets/greensummer.jpg");
+  background-image: url("../../assets/images/martin-shreder.jpg");
   background-position: center;
-  background-size: 100% 100%;
+  //margin-top: 3.9rem;
 }
