--- a/learn-to-rock/src/components/navbar/navbar.scss
+++ b/learn-to-rock/src/components/navbar/navbar.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 .navbar-light  {
-  background-color: #7e651e8c;
+  //background-color: #7e651e8c;
   .navbar-brand {
     color: white;
     font-size: 25px;
